# laforge

./: .build.yml  .gitignore  .lgtm.yml  .readthedocs.yml  .sonarcloud.properties  .travis.yml  MANIFEST.in  README.md  README.rst  build.ini  conftest.py  dev-requirements.txt  noxfile.py  noxy.py  pylintrc  requirements.txt  setup.cfg  setup.py  tox.ini
.builds/: a_ubuntu.yml  arch.yml  build_wheel_invoke.yml  build_wheel_test.yml  clone_test_deploy.yml  deploy_arch.yml  py36.yml  ubuntu.yml  venv_build_wheel_test.yml
.circleci/: config.yml  env  mysql.ini
_old_test/: test_command.py  test_toolbox.py
_old_test/broken/: endtoend_test_builder_Tasklist.py
_old_test/distro_specifc/: sqlite.py
docs/: conf.py  development.rst  example.rst  index.rst  license.rst  module.rst  overview.rst  requirements.txt  todo.rst
docs/_static/: override.css  python.txt
docs/_templates/: layout.html
laforge/: __init__.py  __main__.py  __thing.py  builder.py  command.py  create_ini.py  decoupage.py  distros.py  garnish.py  logo.py  runner.py  sql.py  tech.py  toolbox.py
laforge/data/: reserved_words.yaml  tech_inputs.yaml
laforge/quarters/: lifeform.txt  noun.txt  postnoun.txt  prenoun.txt  preposition.txt  preverb.txt  problem_adjective.txt  suggestion.txt  tech.py  verb.txt
test/: blah.blah  build.py  conftest.py  endtoend_test_builder_Tasklist.py  fix_sqlite.py  mypy_parser_issue.py  r  test__notes.py  test_broken_builds.py  test_builder.py  test_builder_Task.py  test_builds.py  test_command.py  test_create.py  test_csv_sample_hypothesis.py  test_csv_sample_watch.py  test_distro.py  test_logo.py  test_save_cfg.py  test_sql.py  test_sql_Channel.py  test_sql_Distro.py  test_sql_Identifier.py  test_sql_Script.py  test_sql_Table.py  test_sql_execute.py  test_tech.py  test_toolbox.py
test/broken/: endtoend_test_builder_Tasklist.py  unc_path.ini
test/buildfiles/: csvs.py  keywords.py
test/data/: small.csv
test/distro_specific/: mssql.py  mysql.py  postgresql.py  sqlite.py
test/new/: build.py
test/old/: old_csv_sample_watch.py  test__misc.py  test_distro.py  test_logo.py  test_sql.py
test/samples/: medium.csv  test_builder_simple_list.toml  test_builder_sql_list.ini  test_builder_sql_list.toml  test_builder_stata_list.toml  test_test.ini  weird.csv
