
# https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
include = laforge/*.py
omit = */__*.py

[coverage:report]
exclude_lines =
    if __name__
    raise AssertionError
    raise NotImplementedError
    except ImportError
    def __

[doc8]
ignore-path=
    .tox,
    .venv,
    laforge.egg-info,
    docs/_build

[flake8]
ignore = E203, E266, E402, E501, W503
max-line-length = 80
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    .tox,
    .venv,
    __pycache__,
    __init__.py

# https://pythonwheels.com/
[metadata]
license_file = LICENSE

[mypy]
warn_return_any = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
python_version = 3.7
warn_unused_configs = True

# [mypy-pandas.*]
# ignore_missing_imports = True

# [mypy-pyparsing.*]
# ignore_missing_imports = True

# [mypy-sqlalchemy.*]
# ignore_missing_imports = True

[tool:pytest]
filterwarnings =
    ignore:Using or importing the ABCs:DeprecationWarning
log_cli = False
log_cli_level = WARNING
testpaths = test
markers =
    slow
    mssql: Microsoft SQL Server via pyodbc
    mysql: MySQL or MariaDB via pymysql
    postgresql: PostGreSQL via psycopg2
    sqlite: uses sqlite (via sqlite3)
    win32: Windows, as reported by sys.platform
    on_enclave: (machine-specific)
