[metadata]
name = laforge
version = 0.1.5
url = https://git.sr.ht/~matvan/laforge
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: SQL
    Topic :: Database
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
license = AGPL-3.0-or-later
license_file = LICENSE
description = A low-key build system for working with data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = build data database pandas pipeline SQL SQLAlchemy workflow

[options]
zip_safe = False
include_package_data = True

[coverage:run]
branch = True
include = laforge/*.py
omit = */__*.py

[coverage:report]
exclude_lines =
    if __name__
    raise NotImplementedError
    except ImportError

[doc8]
ignore-path=
    .tox,
    .venv,
    laforge.egg-info,
    docs/_build

[flake8]
# ignore = E203, E266, E402, E501, W503
max-line-length = 88
max-complexity = 10
# select = B,C,E,F,W,T4,B9
exclude =
    .git,
    .nox,
    .tox,
    .venv,
    test,
    __pycache__,
    __init__.py

[tool:pytest]
# filterwarnings =
#     ignore:Using or importing the ABCs:DeprecationWarning
log_cli = False
log_cli_level = DEBUG
testpaths = test
markers =
    slow
    mssql: Microsoft SQL Server via pyodbc
    mysql: MySQL or MariaDB via pymysql
    postgresql: PostGreSQL via psycopg2
    sqlite: uses sqlite (via sqlite3)
    win32: Windows, as reported by sys.platform
    on_enclave: (machine-specific)
