[metadata]
name = laforge
version = 0.1.7.dev0
url = https://git.sr.ht/~matvan/laforge
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: SQL
    Topic :: Database
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
license = AGPL-3.0-or-later
license_file = LICENSE
description = A low-key build system for working with data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = build data database pandas pipeline SQL SQLAlchemy workflow

[options]
zip_safe = False
include_package_data = True

[coverage:run]
branch = True
source = laforge
omit = */__*.py

[coverage:report]
exclude_lines =
    if __name__
    raise NotImplementedError
    except ImportError

[coverage:html]
directory = build/coverage

[doc8]
ignore-path=
    *.txt,
    docs/_static,
    .nox,
    .venv,
    build,
    laforge,
    laforge.egg-info
verbose = 0

[flake8]
max-line-length = 88
max-complexity = 10
exclude =
    .git,
    .nox,
    .venv,
    test,
    __pycache__,
    __init__.py

[tool:pytest]
# filterwarnings =
#     ignore:Using or importing the ABCs:DeprecationWarning
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_functions = t_* test_*
markers =
    slow: sslloowwww
    win32: Windows as reported by sys.platform
